# glbind

./: .gitignore  CMakeLists.txt  README.md  glbind.h
examples/: 01_Triangle.c  glbExamplesCommon.c
examples/01_Triangle/: 01_Triangle.c
examples/99_ARB_shaders/: 99_ARB_shaders.c
examples/99_ARB_shaders/resources/: FragmentShader.txt  VertexShader.txt
resources/: README.md
source/: glbind_build.cpp  glbind_template.h
